[package]
name = "bft-consensus-bench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Byzantine consensus benchmark — PBFT vs Raft throughput and fault tolerance comparison"
repository = "https://github.com/jdh847/bft-consensus-bench"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "consensus"
harness = false
